@@ -7,6 +7,7 @@
     * Fix a bug: name 'URLError' is not defined.
     * Fix a bug: "cp" failed when install firefox extension.
     * Fix a bug: error happens when the font size is 8.5
+    * Fix a bug: "unknown locale" ValueError raised for ug_CN
 
 2010-05-07 CHEN Yangyang <skabyy@gmail.com>
 
